# gr-pipe

./: CMakeLists.txt  MANIFEST.md  README  README.md
apps/: CMakeLists.txt
cmake/Modules/: gnuradio-pipeConfig.cmake  pipeConfig.cmake
docs/: CMakeLists.txt  README.pipe
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
examples/: pipe_demo.grc  pipe_filter_test1.grc  pipe_sink_test1.grc  pipe_sink_test2.grc  pipe_source_test1.grc  pipe_source_test2.grc
examples/square_pipe_blocks/: SquareJava.java  square-c.c  square-csharp.cs  square-go.go  square-haskell.hs  square-javascript.js  square-lua.lua  square-matlab.m  square-node.js  square-perl.pl  square-php.php  square-python.py  square-r.r  square-ruby.rb  square-rust.rs  test_data_decode.py  test_data_gen.py
grc/: CMakeLists.txt  pipe_filter.block.yml  pipe_filter.xml  pipe_sink.block.yml  pipe_sink.xml  pipe_source.block.yml  pipe_source.xml
include/: CMakeLists.txt  pipe_api.h  pipe_filter.h
include/pipe/: CMakeLists.txt  api.h  filter.h  sink.h  source.h
lib/: CMakeLists.txt  filter_impl.cc  filter_impl.h  pipe_filter.cc  pipe_sink.cc  pipe_source.cc  sink_impl.cc  sink_impl.h  source_impl.cc  source_impl.h
python/: CMakeLists.txt  __init__.py  qa_filter.py  qa_pipe.py  qa_sink.py  qa_source.py
python/pipe/bindings/: CMakeLists.txt  filter_python.cc  python_bindings.cc  sink_python.cc  source_python.cc
python/pipe/bindings/docstrings/: filter_pydoc_template.h  sink_pydoc_template.h  source_pydoc_template.h
swig/: CMakeLists.txt  pipe_filter.i  pipe_sink.i  pipe_source.i  pipe_swig.i
(+17 files in other folders)
